--- a/home.html
+++ b/home.html
@@ -94,6 +94,22 @@
 
     };
 
+    document.getElementById("imgbanbtn-prev").onclick = function() {
+        if (bannerStatus === 1) {
+            bannerStatus = 2;
+        }
+        else if (bannerStatus === 2) {
+            bannerStatus = 3;
+        }
+        else if (bannerStatus === 3) {
+            bannerStatus = 1;
+        }
+        bannerLoop();
+    };
+
+    document.getElementById("imgbanbtn-next").onclick = function () {
+        bannerLoop();
+    };
 
     function  bannerLoop() {
         if (bannerStatus === 1) {
